location styling updates
better centering of the image for responsive layouts

--- a/en/index.html
+++ b/en/index.html
@@ -29,7 +29,7 @@
     <link href="/css/owl.carousel.css"          rel="stylesheet" />
     <link href="/css/owl.carousel.themed.css"   rel="stylesheet" />
     <link href="/css/animate.css"               rel="stylesheet" />
-    <link href="favicon.ico"                    rel="shortcut icon" type="image/x-icon" />
+    <link href="/favicon.ico"                    rel="shortcut icon" type="image/x-icon" />
 </head>
 
 <body>
@@ -195,11 +195,11 @@
 
             <div id="location-holder">
                 <div class="row">
-                    <div class="text-center col-md-3 col-md-offset-4">
+                    <div class="text-center col-md-12">
                         <div class="pad-bottom">
-                            <div style="background-color: #F5F5F5;padding: 10px 0; border-radius: 7px;">
+                            <div id="location-image-holder">
                                 <h4><strong>Federation University – Gippsland Campus (Churchill)</strong></h4>
-                                <img src="/panel2x720.jpg" class="center-block img-responsive panel2" />
+                                <img src="/panel2x720.jpg" class="center-block img-responsive" />
                                 Location is 2 hrs driving from Melbourne CBD and 3hrs from the Melbourne Tullamarine Airport
                             </div>
                         </div>
