--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
 
             <div id="location-holder">
                 <div class="row">
-                    <div class="text-center col-md-3 col-md-offset-4">
+                    <div class="text-center col-md-12">
                         <div class="pad-bottom">
-                            <div style="background-color: #F5F5F5;padding: 10px 0; border-radius: 7px;">
+                            <div id="location-image-holder">
                                 <h4><strong>Federation University – Gippsland Campus (Churchill)</strong></h4>
-                                <img src="/panel2x720.jpg" class="center-block img-responsive panel2" />
+                                <img src="/panel2x720.jpg" class="center-block img-responsive" />
                                 cách trung tâm thành phố Melbourne 2 giờ lái xe và 3 giờ nếu từ sân bay Tullamarine
                             </div>
                         </div>
