--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <![endif]-->
 
         <link id="css" href="css/bootstrap.css" rel="stylesheet" />
-        <link href="css/Site.css" rel="stylesheet" />
+        <link href="css/site.css" rel="stylesheet" />
         <link href="css/app.css" rel="stylesheet" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
