--- a/en/index.html
+++ b/en/index.html
@@ -31,7 +31,6 @@
     <script src="../js/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="../js/bootstrap.js" type="text/javascript"></script>
     <script src="../js/modernizr-2.6.2.js"></script>
-    <script src="../js/app.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -113,7 +112,7 @@
                             </div>
                             <div class="panel-body">
 
-                                <img src="../img/clouds.png" class="img-circle center-block img-responsive" />
+                                <img src="../img/panel1.jpg" class="img-responsive" />
                                 <h3>Theme</h3>
                                 <p>Preparing for the Lord's Return</p>
 
@@ -159,7 +158,7 @@
                             </div>
                             <div class="panel-body">
 
-                                <img src="../img/location.jpg" class="img-circle  center-block img-responsive" />
+                                <img src="../img/panel2.jpg" class="img-responsive" />
                                 <h3>Location</h3>
                                 <p>&nbsp;</p>
                                 <p>Federation University – Gippsland Campus (Churchill) - <a href="https://www.google.com.au/maps/place/Federation+University+Australia+-+Gippsland+Campus/@-38.3183223,146.418372,14z/data=!4m2!3m1!1s0x6b29132971586b73:0xf0579a514431410" target="_blank">MAP</a></p>
@@ -191,7 +190,7 @@
                                 <h3 class="panel-title"><i class="glyphicon glyphicon-book"> </i> Registration Info</h3>
                             </div>
                             <div class="panel-body">
-                                <img src="../img/jump.jpg" class="img-circle  center-block img-responsive" />
+                                <img src="../img/panel3.jpg" class="img-responsive" />
                                 <h3>Fees</h3>
                                 <ul>
                                     <li>Under 5: $50 AUD</li>
