Son: add speaker pages

--- a/en/index.html
+++ b/en/index.html
@@ -139,7 +139,7 @@
                                     <li>Great place for fellowship and meeting new friends</li>
 
                                 </ul>
-                                <p><span class="text-warning">Dietary:</span> Vietnamese cuisine will be the main dish at the Melbourne 2016 conference. Special dietary requirements must be made known at the time of registration – <span class="text-warning">we cannot guarantee all different dietary needs can be met.</span></p>
+                             
                             </div>
                             <div class="p-footer">
                                 <hr />
@@ -163,7 +163,7 @@
                                 <p>&nbsp;</p>
                                 <p>Federation University – Gippsland Campus (Churchill) - <a href="https://www.google.com.au/maps/place/Federation+University+Australia+-+Gippsland+Campus/@-38.3183223,146.418372,14z/data=!4m2!3m1!1s0x6b29132971586b73:0xf0579a514431410" target="_blank">MAP</a></p>
                                 <p>&nbsp;</p>
-                                <p>Location is 2 hrs driving from Melbourne CBD and 3hrs from the Melbourne Tullamarine Airport</p>
+                                <p>Location is 2 hrs driving from Melbourne CBD, 2 and a half hours from the Melbourne Tullamarine Airport</p>
                                 <p>&nbsp;</p><p>&nbsp;</p>
                                 <h3>Directions</h3>
                                 <p>&nbsp;</p>
