Son: add organiser pages

--- a/faq.html
+++ b/faq.html
@@ -61,6 +61,7 @@
 
                             <li><a href="/en/index.html">English</a></li>
                             <li><a href="/speakers.html">Diễn Giả</a></li>
+                            <li><a href="/organiser.html">Ban Tổ Chức</a></li>
                             <li><a href="/faq.html">Giải Đáp Thắc Mắc</a></li>
                            
                         </ul>
@@ -78,7 +79,7 @@
                 <div>&nbsp;</div>
                 <div class="jumbotron banner">
                     <h1> 
-                       Chuẩn bị nghênh đón Chúa
+                       Chuẩn Bị Nghênh Đón Chúa
                     </h1>
                     <p class="lead">Hầu cho lòng anh em được vững vàng, và thánh sạch không trách được trước mặt Đức Chúa Trời, là Cha chúng ta, khi Đức Chúa Jêsus chúng ta sẽ đến với hết thảy thánh đồ Ngài!</p>
                     <cite>
@@ -92,10 +93,8 @@
 
                 <div class="container question-answer">
 
-                    <h2>Giải đáp thắc mắc.</h2>
+                    <h2>Giải đáp thắc mắc</h2>
                     
-
-
                     <div class="row">
                     <h4>VỀ ĐẠI HỘI</h4>
                     <h5>Tôi muốn biết chi tiết ngày giờ tham dự Đại hội.</h5>       
