--- a/en/speakers.html
+++ b/en/speakers.html
@@ -58,9 +58,9 @@
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
-
-                            <li><a href="/index.html">Tiếng Việt</a></li>
+                            <li><a href="/en/index.html">English</a></li>
                             <li><a href="/en/speakers.html">Speakers</a></li>
+                            <li><a href="/en/organiser.html">Organiser</a></li>
                             <li><a href="/en/faq.html">FAQ</a></li>
 
                         </ul>
