Son: add more speakers and update text

--- a/en/index.html
+++ b/en/index.html
@@ -80,7 +80,7 @@
                 <div>&nbsp;</div>
                 <div class="jumbotron banner">
                     <h1>Preparing for the Lord’s Return</h1>
-                    <p class="lead">May he strengthen your hearts so that you will be blamless and holy in the presence of our god and father when our lord jesus comes with all his holy ones</p>
+                    <p class="lead">May he strengthen your hearts so that you will be blamless and holy in the presence of our God and Father when our Lord Jesus comes with all his holy ones</p>
                     <cite>
                         I Thessalonians 3:13
                     </cite>
@@ -134,7 +134,7 @@
                                     <li>Full English and Vietnamese programs for all age groups (combined opening and closing ceremonies)</li>
                                     <li>Training sessions by the experts of their fields</li>
                                     <li>Separate program for children and teens</li>
-                                    <li>Holding a National Bible Quiz in Vietnamese and English with individual and church award.</li>
+                                    <li>National Bible Quiz in Vietnamese and English with individual and church awards.</li>
                                     <li>Joined by World Vietnamese Christians Fellowship committee</li>
                                     <li>Excellent facilities and accommodation</li>
                                     <li>Vietnamese cuisine</li>
@@ -209,7 +209,7 @@
                                     <li>Above 64/Pension: $350 AUD </li>
                                 </ul>
                                
-                                <p><span class="text-warning">Family discount: </span> Family with 2 parents & 2 or more children gets a family discount. The oldest child will pay full fee according to standard fee.</p>
+                                <p><span class="text-warning">Family discount: </span> Families with 2 parents & 2 or more children gets a family discount. The oldest child will pay full fee according to standard fee.</p>
                                 <p>Second child and any other child after:</p>
                                 <ul>
                                     <li>under 5 year old -> free</li>
@@ -217,7 +217,8 @@
                                 </ul>
 
                                  
-                                <p><span class="text-warning">Air bed discount:</span> We unfortunately have only 350 beds available, the balance of the conference will be provided with airbeds. If you have been allocated with an air bed, you are eligible for a $20 refund and an air bed at the end of the conference. If you have a special and can’t sleep on an air bed, please inform the organizer when you register.</p>                   
+                                <p><span class="text-warning">Air bed discount:</span> We unfortunately have only 350 beds available, the balance of the conference will be provided with airbeds. 
+                                    <span class="text-warning">Condition:</span> If you have been allocated with an air bed, you are eligible for a $20 refund and an air bed at the end of the conference. If you have a special and can’t sleep on an air bed, please inform the organizer when you register.</p>                   
 
 
                                 <p>Fee includes all costs at Conference: accommodation, food (Vietnamese cuisine – catered by church) and all facilities during the conference period, excluding transport cost.</p>
