--- a/en/organiser.html
+++ b/en/organiser.html
@@ -76,7 +76,7 @@
                 <div>&nbsp;</div>
                 <div class="jumbotron banner">
                     <h1>Preparing for the Lord’s Return</h1>
-                    <p class="lead">May he strengthen your hearts so that you will be blamless and holy in the presence of our god and father when our lord jesus comes with all his holy ones</p>
+                    <p class="lead">May he strengthen your hearts so that you will be blamless and holy in the presence of our God and Father when our Lord Jesus comes with all his holy ones</p>
                     <cite>
                         I Thessalonians 3:13
                     </cite>
@@ -134,7 +134,7 @@
                         <li>Đặc Trách Nghệ Thuật: Cô Hiếu (Melb VECA)</li>
                         <li>Đặc Trách In Ấn: Anh Châu Sơn (NAB)</li>
                         <li>Đặc Trách Mạng online: Anh Kyle (Springvale VECA)</li>
-                        <li>Đặc Trách Phim Ảnh: Anh Lê Hoàng Em (Kew Baptist)</li>
+                        <li>Đặc Trách Phim Ảnh: Anh Lưu Hoàng Em (Kew Baptist)</li>
                         
                     </ul>
 
@@ -160,6 +160,7 @@
                     <ul>
                         <li>Đặc Trách Ngân Sách: Cô Nguyễn Trần Thiên Hương (Kew Baptist)</li>
                         <li>Đặc Trách Vận Động Tài Chánh: Anh Châu Sơn (Nguồn An Bình)</li>
+                        <li>Đặc Trách sổ sách - Cô Đặng Thị Bích Trâm </li>
                       
                     </ul>
                    <p>Các anh chị em góp phần với các đặc trách: Anh Luôn (Nguồn An Bình); Cô Ngọc (Kew Baptist); Anh Khôi- Nguyên (Kew Baptist);</p>
