--- a/organiser.html
+++ b/organiser.html
@@ -139,7 +139,7 @@
                         <li>Đặc Trách Nghệ Thuật: Cô Hiếu (Melb VECA)</li>
                         <li>Đặc Trách In Ấn: Anh Châu Sơn (NAB)</li>
                         <li>Đặc Trách Mạng online: Anh Kyle (Springvale VECA)</li>
-                        <li>Đặc Trách Phim Ảnh: Anh Lê Hoàng Em (Kew Baptist)</li>
+                        <li>Đặc Trách Phim Ảnh: Anh Lưu Hoàng Em (Kew Baptist)</li>
                         
                     </ul>
 
@@ -165,7 +165,7 @@
                     <ul>
                         <li>Đặc Trách Ngân Sách: Cô Nguyễn Trần Thiên Hương (Kew Baptist)</li>
                         <li>Đặc Trách Vận Động Tài Chánh: Anh Châu Sơn (Nguồn An Bình)</li>
-                      
+                        <li>Đặc Trách sổ sách - Cô Đặng Thị Bích Trâm</li>
                     </ul>
                    <p>Các anh chị em góp phần với các đặc trách: Anh Luôn (Nguồn An Bình); Cô Ngọc (Kew Baptist); Anh Khôi- Nguyên (Kew Baptist);</p>
                     <p>Các Đặc Trách vẫn còn cần sự đóng góp trong nhiều công việc, nếu quý vị cảm động để dự phần phục vụ, xin liên lạc các Đặc Trách hoặc Trưởng ban Tổ chức.</p>
