--- a/en/faq.html
+++ b/en/faq.html
@@ -79,7 +79,7 @@
                 <div>&nbsp;</div>
                 <div class="jumbotron banner">
                     <h1>Preparing for the Lord’s Return</h1>
-                    <p class="lead">May he strengthen your hearts so that you will be blamless and holy in the presence of our god and father when our lord jesus comes with all his holy ones</p>
+                    <p class="lead">May he strengthen your hearts so that you will be blamless and holy in the presence of our God and Father when our Lord Jesus comes with all his holy ones</p>
                     <cite>
                         I Thessalonians 3:13
                     </cite>
