Son + MS Khoi: fix some text before live

--- a/faq.html
+++ b/faq.html
@@ -242,7 +242,6 @@
                         <h4 style="border-bottom: 2px solid #4ebdc0; padding-bottom:10px;">Contact Us</h4>
                         <p>Vietnamese Christians Fellowship Conference in Australia</p>
                         <p><i class="glyphicon glyphicon-envelope" style="color:#C0C0C0"> </i> info@melbourne2016.net.au</p>
-                        <p><i class="glyphicon glyphicon-phone" style="color:#C0C0C0"> </i> +61 404 889 336 </p>
                     </div>
                 </div>
 
@@ -250,7 +249,7 @@
         </div>
         <div class="container-fluid1" style="background: #333; color:white;">
             <div class="container" style="padding: 20px 10px;">
-                <p style="text-align:center;">&copy; 2016 | Vietnamese Christians Fellowship Conference in Australia - Melbourne 2016</p>
+                <p style="text-align:center;">&copy; 2016 | Vietnamese Christian Fellowship Conference in Australia - Melbourne 2016</p>
             </div>
         </div>     
         <!-- END FOOTER -->    
