--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                <h3>Lệ phí</h3>
                                 <ul>
                                     <li>Dưới 5 tuổi: $50 AUD</li>
-                                    <li>Từ 6-12 tuổi: $350 AUD</li>
+                                    <li>Từ 6-11 tuổi: $350 AUD</li>
                                     <li>Từ 12-64 tuổi: $440 AUD</li>
                                     <li>Trên 64/Pension: $390 AUD</li>
                                 </ul>
@@ -207,7 +207,7 @@
                                       <p class="text-danger"> Đặc biệt giảm giá cho những ai đăng ký và đóng tiền trước ngày 30/09/2016.  Giá giảm:</p>
                                         <ul>
                                             <li>Dưới 5 tuổi: $50 AUD</li>
-                                            <li>Từ 6-12 tuổi: $320 AUD</li>
+                                            <li>Từ 6-11 tuổi: $320 AUD</li>
                                             <li>Từ 12-64 tuổi: $400 AUD</li>
                                             <li>Trên 64/Pension: $350 AUD</li>
                                         </ul>
@@ -253,7 +253,6 @@
                         <h4 style="border-bottom: 2px solid #4ebdc0; padding-bottom:10px;">Contact Us</h4>
                         <p>Vietnamese Christians Fellowship Conference in Australia</p>
                         <p><i class="glyphicon glyphicon-envelope" style="color:#C0C0C0"> </i> info@melbourne2016.net.au</p>
-                        <p><i class="glyphicon glyphicon-phone" style="color:#C0C0C0"> </i> +61 404 889 336 </p>
                     </div>
                 </div>
 
@@ -261,7 +260,7 @@
         </div>
         <div class="container-fluid1" style="background: #333; color:white;">
             <div class="container" style="padding: 20px 10px;">
-                <p style="text-align:center;">&copy; 2016 | Vietnamese Christians Fellowship Conference in Australia - Melbourne 2016</p>
+                <p style="text-align:center;">&copy; 2016 | Vietnamese Christian Fellowship Conference in Australia - Melbourne 2016</p>
             </div>
         </div>     
         <!-- END FOOTER -->       
