--- a/speakers.html
+++ b/speakers.html
@@ -210,7 +210,7 @@
                 <hr />
                 <footer>
                     
-                    <p style="text-align:center;">&copy; 2016 | Vietnamese Christians Fellowship Conference in Australia – Melbourne 2016 </p>
+                    <p style="text-align:center;">&copy; 2016 | Vietnamese Christian Fellowship Conference in Australia – Melbourne 2016 </p>
                 </footer>
             </div>
 
