--- a/en/speakers.html
+++ b/en/speakers.html
@@ -3,28 +3,27 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="img/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/img/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/img/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/img/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link href="../img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     <title>
         Vietnamese Christians Fellowship Conference in Australia – Melbourne 2016
-
     </title>
 
     <script src="js/jquery-1.10.2.js" type="text/javascript"></script>
@@ -39,8 +38,8 @@
     <![endif]-->
 
         <link id="css" href="../css/bootstrap.css" rel="stylesheet" />
-        <link href="../css/site.css" rel="stylesheet" />
-        <link href="../css/app.css" rel="stylesheet" />
+        <link href="/css/site.css" rel="stylesheet" />
+        <link href="/css/app.css" rel="stylesheet" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     </head>
@@ -54,15 +53,15 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="/" id="A1" class="navbar-brand"><span><img src="../img/ms-icon-70x70.png"> </span> Melbourne 2016</a>
+                        <a href="." id="A1" class="navbar-brand"><span><img src="/img/ms-icon-70x70.png"> </span> Melbourne 2016</a>
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
-                            <li><a href="/en/index.html">English</a></li>
+                            <li><a href="/">Tiếng Việt</a></li>
                             <li><a href="/en/speakers.html">Speakers</a></li>
                             <li><a href="/en/organiser.html">Organiser</a></li>
                             <li><a href="/en/faq.html">FAQ</a></li>
-
+                            <li><a href="/en/files.html">Files</a></li>
                         </ul>
 
                         <ul class="nav navbar-nav navbar-right hidden">
@@ -201,6 +200,7 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="speakers.html">Speakers</a></li>
                             <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="files.html">Files</a></li>
                             <li><a href="/register/">Registration</a></li>
                             <li><a href="/register/view">View Registration</a></li>
                         </ul>
@@ -210,7 +210,6 @@
                         <h4 style="border-bottom: 2px solid #4ebdc0; padding-bottom:10px;">Contact Us</h4>
                         <p>Vietnamese Christians Fellowship Conference in Australia</p>
                         <p><i class="glyphicon glyphicon-envelope" style="color:#C0C0C0"> </i> info@melbourne2016.net.au</p>
-                        <p><i class="glyphicon glyphicon-phone" style="color:#C0C0C0"> </i> +61 404 889 336 </p>
                     </div>
                 </div>
 
