--- a/faq.v2.html
+++ b/faq.v2.html
@@ -25,9 +25,28 @@
     </title>
     <link href="/css/bootstrap.css"             rel="stylesheet" id="css"  />
     <link href="/css/Site.css"                  rel="stylesheet" />
-    <link href="/css/app.css?v104"              rel="stylesheet" />
+    <link href="/css/app.css?v10411"              rel="stylesheet" />
     <link href="/css/animate.css"               rel="stylesheet" />
     <link href="favicon.ico"                    rel="shortcut icon" type="image/x-icon" />
+
+    <style type="text/css">
+        .panel-body{
+            height: auto; 
+            color: #F5F5F5;
+        }
+
+        .panel-default {
+            border-color: #dddddd;
+        }
+
+        .panel-default > .panel-heading {
+            color: #333333;
+            background-color: #C0C0C0;
+            border-color: #dddddd;
+        }
+
+
+    </style>
 </head>
 
 
