--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <li><a href="/speakers.html">Diễn Giả</a></li>
                             <li><a href="/organiser.html">Ban Tổ Chức</a></li>
                             <li><a href="/faq.html">Giải Đáp Thắc Mắc</a></li>
-                           
+                            <li><a href="/files.html">Tải về</a></li>
                         </ul>
 
                         <ul class="nav navbar-nav navbar-right hidden">
@@ -185,8 +185,8 @@
                                 <img src="img/panel3.jpg" class="img-responsive" />
                                <h3>Lệ phí</h3>
                                 <ul>
-                                    <li>Dưới 5 tuổi: $50 AUD</li>
-                                    <li>Từ 6-12 tuổi: $350 AUD</li>
+                                    <li>5 tuổi và nhỏ hơn: $50 AUD</li>
+                                    <li>Từ 6-11 tuổi: $350 AUD</li>
                                     <li>Từ 12-64 tuổi: $440 AUD</li>
                                     <li>Trên 64/Pension: $390 AUD</li>
                                 </ul>
@@ -196,7 +196,7 @@
                                     <p> Gia đình gồm có ba mẹ và 2 con trở lên được giảm giá. Con lớn nhất sẽ đóng nguyên giá. Các con thứ hai và kế tiếp
                                        
                                     <ul>
-                                        <li>dưới 5 tuổi -> miễn phí</li>
+                                        <li>5 tuổi và nhỏ hơn -> miễn phí</li>
                                         <li>trên 5 tuổi -> giảm $100 cho mỗi cháu</li>
                                     </ul>
 
@@ -206,8 +206,8 @@
 
                                       <p class="text-danger"> Đặc biệt giảm giá cho những ai đăng ký và đóng tiền trước ngày 30/09/2016.  Giá giảm:</p>
                                         <ul>
-                                            <li>Dưới 5 tuổi: $50 AUD</li>
-                                            <li>Từ 6-12 tuổi: $320 AUD</li>
+                                            <li>5 tuổi và nhỏ hơn: $50 AUD</li>
+                                            <li>Từ 6-11 tuổi: $320 AUD</li>
                                             <li>Từ 12-64 tuổi: $400 AUD</li>
                                             <li>Trên 64/Pension: $350 AUD</li>
                                         </ul>
@@ -236,7 +236,7 @@
                 <hr>
                 <div class="row">
                     <div class="col-lg-4">
-                        <img src="img/logo.png" style="opacity: 0.5" />
+                        <img src="img/logo-gray.png" style="opacity: 0.5" />
                     </div>
                     <div class="col-lg-4">
                         <h4 style="border-bottom: 2px solid #4ebdc0; padding-bottom:10px;">Links</h4>
@@ -244,6 +244,7 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="speakers.html">Speakers</a></li>
                             <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="files.html">Files</a></li>
                             <li><a href="register/">Registration</a></li>
                             <li><a href="register/view">View Registration</a></li>
                         </ul>
@@ -253,7 +254,6 @@
                         <h4 style="border-bottom: 2px solid #4ebdc0; padding-bottom:10px;">Contact Us</h4>
                         <p>Vietnamese Christians Fellowship Conference in Australia</p>
                         <p><i class="glyphicon glyphicon-envelope" style="color:#C0C0C0"> </i> info@melbourne2016.net.au</p>
-                        <p><i class="glyphicon glyphicon-phone" style="color:#C0C0C0"> </i> +61 404 889 336 </p>
                     </div>
                 </div>
 
