--- a/register.html
+++ b/register.html
@@ -478,7 +478,7 @@
 
                                     <select name="" class="form-control family-discount">
                                         <option>-- FAMILY DISCOUNT --</option>
-                                        <option>2nd child 5yo and under</option>
+                                        <option>2nd child 5yo or under</option>
                                         <option>2nd child over 5yo</option>
                                     </select>
 
