--- a/en/index.html
+++ b/en/index.html
@@ -6,24 +6,25 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="img/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/img/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/img/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/img/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link href="../img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+
     <title>
         Vietnamese Christians Fellowship Conference in Australia – Melbourne 2016
     </title>
@@ -55,16 +56,16 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="/" id="A1" class="navbar-brand"><span><img src="../img/ms-icon-70x70.png"> </span> Melbourne 2016</a>
+                        <a href="." id="A1" class="navbar-brand"><span><img src="/img/ms-icon-70x70.png"> </span> Melbourne 2016</a>
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
 
-                            <li><a href="/en/index.html">English</a></li>
+                            <li><a href="/">Tiếng Việt</a></li>
                             <li><a href="/en/speakers.html">Speakers</a></li>
                             <li><a href="/en/organiser.html">Organiser</a></li>
                             <li><a href="/en/faq.html">FAQ</a></li>
-
+                            <li><a href="/en/files.html">Files</a></li>
                         </ul>
 
                         <ul class="nav navbar-nav navbar-right hidden">
@@ -196,15 +197,15 @@
                                 <img src="../img/panel3.jpg" class="img-responsive" />
                                 <h3>Fees</h3>
                                 <ul>
-                                    <li>Under 5: $50 AUD</li>
-                                    <li>6-12 y.o: $350 AUD</li>
+                                    <li>5y.o and under: $50 AUD</li>
+                                    <li>6-11 y.o: $350 AUD</li>
                                     <li>12-64 y.o: $440 AUD</li>
                                     <li>Above 64/Pension: $390 AUD </li>
                                 </ul>
                                 <p><span class="text-warning">Early bird discount:</span> requires registration and full payment before 30/09/2016</p>
                                 <ul>
-                                    <li>Under 5: $50 AUD</li>
-                                    <li>6-12 y.o: $320 AUD</li>
+                                    <li>5y.o and under: $50 AUD</li>
+                                    <li>6-11 y.o: $320 AUD</li>
                                     <li>12-64 y.o: $400 AUD</li>
                                     <li>Above 64/Pension: $350 AUD </li>
                                 </ul>
@@ -212,8 +213,8 @@
                                 <p><span class="text-warning">Family discount: </span> Families with 2 parents & 2 or more children gets a family discount. The oldest child will pay full fee according to standard fee.</p>
                                 <p>Second child and any other child after:</p>
                                 <ul>
-                                    <li>under 5 year old -> free</li>
-                                    <li>Over 5 year old ->$100 off</li>
+                                    <li>5 y.o and under -> free</li>
+                                    <li>Over 5 y.o ->$100 off</li>
                                 </ul>
 
                                  
@@ -250,7 +251,7 @@
                 <hr>
                 <div class="row">
                     <div class="col-lg-4">
-                        <img src="img/logo-gray.png" style="opacity: 0.5" />
+                        <img src="/img/logo-gray.png" style="opacity: 0.5" />
                     </div>
                     <div class="col-lg-4">
                         <h4 style="border-bottom: 2px solid #4ebdc0; padding-bottom:10px;">Links</h4>
@@ -258,6 +259,7 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="speakers.html">Speakers</a></li>
                             <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="files.html">Files</a></li>
                             <li><a href="/register/">Registration</a></li>
                             <li><a href="/register/view">View Registration</a></li>
                         </ul>
@@ -267,7 +269,6 @@
                         <h4 style="border-bottom: 2px solid #4ebdc0; padding-bottom:10px;">Contact Us</h4>
                         <p>Vietnamese Christians Fellowship Conference in Australia</p>
                         <p><i class="glyphicon glyphicon-envelope" style="color:#C0C0C0"> </i> info@melbourne2016.net.au</p>
-                        <p><i class="glyphicon glyphicon-phone" style="color:#C0C0C0"> </i> +61 404 889 336 </p>
                     </div>
                 </div>
 
