--- a/files.html
+++ b/files.html
@@ -42,6 +42,12 @@
         <link href="css/site.css" rel="stylesheet" />
         <link href="css/app.css" rel="stylesheet" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+        <style type="text/css">
+        #files-download li{
+                padding-bottom: 15px;
+
+        }
+        </style>
 
     </head>
     <body>
@@ -95,17 +101,22 @@
                 <div class="container question-answer">
 
                     <h2> Tải về</h2>
-                    Các tài liệu bên dưới sẽ có để tải về trước tháng 6/2016
+                    
+                    <p>Quý vị có thể tải các tài liệu bên dưới về để dùng theo nhu cầu:</p>
 
 
 
 
 
-                   <ul>
-                       <li>Quảng cáo Đại Hội</li>
-                       <li>Quảng cáo Đố Kinh Thánh</li>
-                       <li>Thư Mời</li>
-                       <li>Đơn Ghi Danh</li>
+                   <ul id="files-download">
+                    
+                    <li><a href="/files/ThuMoiDHV.pdf" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Thư mời tham dự Đại Hội</a></li>
+                    <li><a href="/files/ThongTinCDDG.pdf" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Thông tin về Chủ Đề và Diễn giả</a></li>
+                    <li><a href="/files/ThongTinDH.pdf" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Thông tin Đại Hội</a></li>
+                    <li><a href="/files/ConferencePoster.zip" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Tờ Quảng cáo Đại Hội </a></li>
+                    <li><a href="/files/BibleQuizPoster.jpg" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Tờ Quảng cáo Đố Kinh Thánh</a></li>
+                    <li><a href="/files/Conference2016RegistrationForm.pdf" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Đơn ghi danh</a></li>
+
                    </ul>
 
                     </div>
