--- a/organiser.html
+++ b/organiser.html
@@ -196,6 +196,10 @@
 
 
             </div>
+            </div>
+
+    </div>
+
 
        <!-- FOOTER -->
             <div class="clearfix">&nbsp;</div>
