--- a/en/files.html
+++ b/en/files.html
@@ -26,10 +26,10 @@
         Vietnamese Christians Fellowship Conference in Australia – Melbourne 2016
     </title>
 
-    <script src="js/jquery-1.10.2.js" type="text/javascript"></script>
-    <script src="js/bootstrap.js" type="text/javascript"></script>
-    <script src="js/modernizr-2.6.2.js"></script>
-    <script src="js/app.js"></script>
+    <script src="/js/jquery-1.10.2.js" type="text/javascript"></script>
+    <script src="/js/bootstrap.js" type="text/javascript"></script>
+    <script src="/js/modernizr-2.6.2.js"></script>
+    <script src="/js/app.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -41,7 +41,12 @@
         <link href="../css/site.css" rel="stylesheet" />
         <link href="../css/app.css" rel="stylesheet" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+        <style type="text/css">
+        #files-download li{
+                padding-bottom: 15px;
 
+        }
+        </style>
     </head>
     <body>
 
@@ -93,17 +98,17 @@
                     <h2>Files</h2>
                     <div>&nbsp;</div>
 
-                    Documents below will be made available for download before June 2016
+                    <p>You can download these files for use as needed:</p>
 
+     <ul id="files-download">
+                    
+                    <li><a href="/files/ThuMoiDHV.pdf" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Conference Invitation letter - Vietnamese (English version coming soon)</a></li>
+                    <li><a href="/files/ThongTinDH.pdf" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Conference Information - Vietnamese (English version coming soon)</a></li>
+                    <li><a href="/files/ConferencePoster.zip" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Conference Poster</a></li>
+                    <li><a href="/files/BibleQuizPoster.jpg" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Conference Bible Quiz Poster </a></li>
+                    <li><a href="/files/Conference2016RegistrationForm.pdf" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Paper Registration Form</a></li>
 
-
-
-                    <ul>
-                        <li>Conference Poster</li>
-                        <li>Bible Quiz Poster</li>
-                        <li>Invitation Letter</li>
-                        <li>Paper Registration Form </li>
-                    </ul>
+                   </ul>
                 </div>
 
                 <div>&nbsp;</div>
