--- a/en/speakers.html
+++ b/en/speakers.html
@@ -26,10 +26,10 @@
         Vietnamese Christians Fellowship Conference in Australia – Melbourne 2016
     </title>
 
-    <script src="js/jquery-1.10.2.js" type="text/javascript"></script>
-    <script src="js/bootstrap.js" type="text/javascript"></script>
-    <script src="js/modernizr-2.6.2.js"></script>
-    <script src="js/app.js"></script>
+    <script src="/js/jquery-1.10.2.js" type="text/javascript"></script>
+    <script src="/js/bootstrap.js" type="text/javascript"></script>
+    <script src="/js/modernizr-2.6.2.js"></script>
+    <script src="/js/app.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
